--- a/质量计划设置页面自定义控件/quality_plan_1.5_cache/quality_plan/html/quality_plan.html
+++ b/质量计划设置页面自定义控件/quality_plan_1.5_cache/quality_plan/html/quality_plan.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 
 <html lang="en">
   <head>
@@ -12,45 +12,45 @@
     <title>Document</title>
   </head>
 
-  <body>
-    <!-- <div id="qualityPlanApp"
+  <body> -->
+<!-- <div id="qualityPlanApp"
 v-loading="loading"
   :element-loading-text="loading_text"
   :element-loading-spinner="loading_icon"
   element-loading-background="rgba(0, 0, 0, 0.8)"> -->
-    <div id="qualityPlanApp">
-      <div class="btn-lsit">
-        <button
-          class="btn-itme"
-          :disabled="getBtnShow('set_role',pageStatus)"
-          @click="SetRole"
-        >
-          设置角色
-        </button>
-        <button
-          class="btn-itme"
-          :disabled="getBtnShow('set_duration_time',pageStatus)"
-          @click="SetDurationTime"
-        >
-          设置持续时间
-        </button>
-      </div>
-      <div class="table-box">
-        <u-table
-          ref="qualityPlanTable"
-          beautify-table
-          highlight-current-row
-          style="width: 100%;"
-          row-key="id"
-          border
-          @row-click="rowClick"
-          use-virtual
-          :height="tableHeight"
-          :treeConfig="{children: 'children', expandAll: false}"
-          :row-class-name="tableRowClassName"
-          :header-cell-style="{height:'60px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}"
-        >
-          <!-- <u-table-column type="select" width="40" align="center">
+<div id="qualityPlanApp">
+  <div class="btn-lsit">
+    <button
+      class="btn-itme"
+      :disabled="getBtnShow('set_role',pageStatus)"
+      @click="SetRole"
+    >
+      设置角色
+    </button>
+    <button
+      class="btn-itme"
+      :disabled="getBtnShow('set_duration_time',pageStatus)"
+      @click="SetDurationTime"
+    >
+      设置持续时间
+    </button>
+  </div>
+  <div class="table-box">
+    <u-table
+      ref="qualityPlanTable"
+      beautify-table
+      highlight-current-row
+      style="width: 100%;"
+      row-key="id"
+      border
+      @row-click="rowClick"
+      use-virtual
+      :height="tableHeight"
+      :treeConfig="{children: 'children', expandAll: false}"
+      :row-class-name="tableRowClassName"
+      :header-cell-style="{height:'60px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}"
+    >
+      <!-- <u-table-column type="select" width="40" align="center">
             <template slot="header" slot-scope="scope">
               <el-checkbox
                 @change="handleCheckAllChange"
@@ -64,218 +64,206 @@ v-loading="loading"
               ></el-checkbox>
             </template>
           </u-table-column> -->
-          <u-table-column type="index" label="序号" width="60" align="center">
-          </u-table-column>
-          <u-table-column
-            :tree-node="true"
-            v-if="getFieldShow('text')"
-            prop="text"
-            label="WBS任务名称"
-            min-width="480"
-          ></u-table-column>
-          <u-table-column
-            v-if="getFieldShow('wbs')"
-            prop="wbs"
-            label="任务代码"
-            width="140"
-          ></u-table-column>
-          <u-table-column
-            v-if="getFieldShow('duration')"
-            label="工时"
-            width="120"
-          >
-            <template slot-scope="scope">
-              <div>
-                ${ scope.row.duration }
+      <u-table-column type="index" label="序号" width="60" align="center">
+      </u-table-column>
+      <u-table-column
+        :tree-node="true"
+        v-if="getFieldShow('text')"
+        prop="text"
+        label="WBS任务名称"
+        min-width="480"
+      ></u-table-column>
+      <u-table-column
+        v-if="getFieldShow('wbs')"
+        prop="wbs"
+        label="任务代码"
+        width="140"
+      ></u-table-column>
+      <u-table-column v-if="getFieldShow('duration')" label="工时" width="120">
+        <template slot-scope="scope">
+          <div>
+            ${ scope.row.duration }
+          </div>
+        </template>
+      </u-table-column>
+      <u-table-column
+        v-if="getFieldShow('start_date')"
+        label="开始时间"
+        width="200"
+      >
+        <template slot-scope="scope">
+          <div>
+            ${ scope.row.start_date }
+          </div>
+        </template>
+      </u-table-column>
+      <u-table-column
+        v-if="getFieldShow('end_date')"
+        label="结束时间"
+        width="200"
+      >
+        <template slot-scope="scope">
+          <div>
+            ${ scope.row.end_date }
+          </div>
+        </template>
+      </u-table-column>
+      <u-table-column label="阶段" width="160">
+        <template slot-scope="scope">
+          <div class="recheck-box" v-show="scope.row.task_type === '3'">
+            <div class="recheck-top">
+              首次复核
+            </div>
+            <div class="recheck-mid">
+              <div class="mid-left">
+                整改
               </div>
-            </template>
-          </u-table-column>
-          <u-table-column
-            v-if="getFieldShow('start_date')"
-            label="开始时间"
-            width="200"
-          >
-            <template slot-scope="scope">
-              <div>
-                ${ scope.row.start_date }
-              </div>
-            </template>
-          </u-table-column>
-          <u-table-column
-            v-if="getFieldShow('end_date')"
-            label="结束时间"
-            width="200"
-          >
-            <template slot-scope="scope">
-              <div>
-                ${ scope.row.end_date }
-              </div>
-            </template>
-          </u-table-column>
-          <u-table-column label="阶段" width="160">
-            <template slot-scope="scope">
-              <div class="recheck-box" v-show="scope.row.task_type === '3'">
-                <div class="recheck-top">
-                  首次复核
+              <div class="mid-right">
+                <div class="mid-right-item mid-right-top">
+                  修改
                 </div>
-                <div class="recheck-mid">
-                  <div class="mid-left">
-                    整改
-                  </div>
-                  <div class="mid-right">
-                    <div class="mid-right-item mid-right-top">
-                      修改
-                    </div>
-                    <div class="mid-right-item">
-                      修改确认
-                    </div>
-                  </div>
-                </div>
-                <div class="recheck-bot">
-                  复核确认
+                <div class="mid-right-item">
+                  修改确认
                 </div>
               </div>
-            </template>
-          </u-table-column>
-          <u-table-column
-            v-if="getFieldShow('duration_time')"
-            label="持续时间"
-            width="120"
+            </div>
+            <div class="recheck-bot">
+              复核确认
+            </div>
+          </div>
+        </template>
+      </u-table-column>
+      <u-table-column
+        v-if="getFieldShow('duration_time')"
+        label="持续时间"
+        width="120"
+      >
+        <template slot-scope="scope">
+          <div class="checek-man" v-show="scope.row.task_type === '3'">
+            ${ scope.row.first_duration }
+          </div>
+          <div class="checek-man" v-show="scope.row.task_type === '3'">
+            ${scope.row.modify_duration }
+          </div>
+          <div class="checek-man" v-show="scope.row.task_type === '3'">
+            ${ scope.row.mod_con_duration }
+          </div>
+          <div
+            class="checek-man"
+            style="border: none;"
+            v-show="scope.row.task_type === '3'"
           >
-            <template slot-scope="scope">
-              <div class="checek-man" v-show="scope.row.task_type === '3'">
-                ${ scope.row.first_duration }
-              </div>
-              <div class="checek-man" v-show="scope.row.task_type === '3'">
-                ${scope.row.modify_duration }
-              </div>
-              <div class="checek-man" v-show="scope.row.task_type === '3'">
-                ${ scope.row.mod_con_duration }
-              </div>
-              <div
-                class="checek-man"
-                style="border: none;"
-                v-show="scope.row.task_type === '3'"
-              >
-                ${ scope.row.confirm_duration }
-              </div>
-              <div
-                v-show="scope.row.task_type === '1'||scope.row.task_type === '2'"
-              >
-                ${ scope.row.first_duration }
-              </div>
-            </template>
-          </u-table-column>
-          <u-table-column
-            v-if="getFieldShow('qp_owner_role')"
-            label="承担人角色"
-            width="160"
+            ${ scope.row.confirm_duration }
+          </div>
+          <div
+            v-show="scope.row.task_type === '1'||scope.row.task_type === '2'"
           >
-            <template slot-scope="scope">
-              <div class="checek-man" v-show="scope.row.task_type === '3'">
-                ${ scope.row.qp_owner_role }
-              </div>
-              <div class="checek-man" v-show="scope.row.task_type === '3'">
-                ${ scope.row.the_owner_role }
-              </div>
-              <div class="checek-man" v-show="scope.row.task_type === '3'">
-                ${ scope.row.qp_owner_role }
-              </div>
-              <div
-                class="checek-man"
-                style="border: none;"
-                v-show="scope.row.task_type === '3'"
-              >
-                ${ scope.row.qp_owner_role }
-              </div>
-              <div
-                v-show="scope.row.task_type === '1'||scope.row.task_type === '2'"
-              >
-                ${ scope.row.qp_owner_role }
-              </div>
-            </template>
-          </u-table-column>
-          <u-table-column
-            v-if="getFieldShow('owner')"
-            label="承担人名称"
-            width="120"
+            ${ scope.row.first_duration }
+          </div>
+        </template>
+      </u-table-column>
+      <u-table-column
+        v-if="getFieldShow('qp_owner_role')"
+        label="承担人角色"
+        width="160"
+      >
+        <template slot-scope="scope">
+          <div class="checek-man" v-show="scope.row.task_type === '3'">
+            ${ scope.row.qp_owner_role }
+          </div>
+          <div class="checek-man" v-show="scope.row.task_type === '3'">
+            ${ scope.row.the_owner_role }
+          </div>
+          <div class="checek-man" v-show="scope.row.task_type === '3'">
+            ${ scope.row.qp_owner_role }
+          </div>
+          <div
+            class="checek-man"
+            style="border: none;"
+            v-show="scope.row.task_type === '3'"
           >
-            <template slot-scope="scope">
-              <div class="checek-man" v-show="scope.row.task_type === '3'">
-                <span v-if="scope.row.isreply==='2'">
-                  ${ scope.row.qp_owner }</span
-                >
-                <span v-else></span>
-              </div>
-              <div class="checek-man" v-show="scope.row.task_type === '3'">
-                <span v-if="scope.row.the_isreply==='2'">
-                  ${ scope.row.the_owner }</span
-                >
-                <span v-else></span>
-              </div>
-              <div class="checek-man" v-show="scope.row.task_type === '3'">
-                <span v-if="scope.row.isreply==='2'">
-                  ${ scope.row.qp_owner }</span
-                >
-                <span v-else></span>
-              </div>
-              <div
-                class="checek-man"
-                style="border: none;"
-                v-show="scope.row.task_type === '3'"
-              >
-                <span v-if="scope.row.isreply==='2'">
-                  ${ scope.row.qp_owner }</span
-                >
-                <span v-else></span>
-              </div>
-              <div
-                v-show="scope.row.task_type === '1'||scope.row.task_type === '2'"
-              >
-                <span v-if="scope.row.isreply==='2'">
-                  ${ scope.row.qp_owner }</span
-                >
-                <span v-else></span>
-              </div>
-            </template>
-          </u-table-column>
-          <u-table-column
-            v-if="getFieldShow('skill')"
-            label="承担人技能"
-            min-width="500"
+            ${ scope.row.qp_owner_role }
+          </div>
+          <div
+            v-show="scope.row.task_type === '1'||scope.row.task_type === '2'"
           >
-            <template slot-scope="scope">
-              <div class="checek-man" v-show="scope.row.task_type === '3'">
-                ${ scope.row.skill }
-              </div>
-              <div class="checek-man" v-show="scope.row.task_type === '3'">
-                ${ scope.row.the_skill }
-              </div>
-              <div class="checek-man" v-show="scope.row.task_type === '3'">
-                ${ scope.row.skill }
-              </div>
-              <div
-                class="checek-man"
-                style="border: none;"
-                v-show="scope.row.task_type === '3'"
-              >
-                ${ scope.row.skill }
-              </div>
-              <div
-                v-show="scope.row.task_type === '1'||scope.row.task_type === '2'"
-              >
-                ${ scope.row.skill }
-              </div>
-            </template>
-          </u-table-column>
-        </u-table>
-      </div>
-    </div>
-    <script src="../js/lodash.js"></script>
+            ${ scope.row.qp_owner_role }
+          </div>
+        </template>
+      </u-table-column>
+      <u-table-column
+        v-if="getFieldShow('owner')"
+        label="承担人名称"
+        width="120"
+      >
+        <template slot-scope="scope">
+          <div class="checek-man" v-show="scope.row.task_type === '3'">
+            <span v-if="scope.row.isreply==='2'"> ${ scope.row.qp_owner }</span>
+            <span v-else></span>
+          </div>
+          <div class="checek-man" v-show="scope.row.task_type === '3'">
+            <span v-if="scope.row.the_isreply==='2'">
+              ${ scope.row.the_owner }</span
+            >
+            <span v-else></span>
+          </div>
+          <div class="checek-man" v-show="scope.row.task_type === '3'">
+            <span v-if="scope.row.isreply==='2'"> ${ scope.row.qp_owner }</span>
+            <span v-else></span>
+          </div>
+          <div
+            class="checek-man"
+            style="border: none;"
+            v-show="scope.row.task_type === '3'"
+          >
+            <span v-if="scope.row.isreply==='2'"> ${ scope.row.qp_owner }</span>
+            <span v-else></span>
+          </div>
+          <div
+            v-show="scope.row.task_type === '1'||scope.row.task_type === '2'"
+          >
+            <span v-if="scope.row.isreply==='2'"> ${ scope.row.qp_owner }</span>
+            <span v-else></span>
+          </div>
+        </template>
+      </u-table-column>
+      <u-table-column
+        v-if="getFieldShow('skill')"
+        label="承担人技能"
+        min-width="500"
+      >
+        <template slot-scope="scope">
+          <div class="checek-man" v-show="scope.row.task_type === '3'">
+            ${ scope.row.skill }
+          </div>
+          <div class="checek-man" v-show="scope.row.task_type === '3'">
+            ${ scope.row.the_skill }
+          </div>
+          <div class="checek-man" v-show="scope.row.task_type === '3'">
+            ${ scope.row.skill }
+          </div>
+          <div
+            class="checek-man"
+            style="border: none;"
+            v-show="scope.row.task_type === '3'"
+          >
+            ${ scope.row.skill }
+          </div>
+          <div
+            v-show="scope.row.task_type === '1'||scope.row.task_type === '2'"
+          >
+            ${ scope.row.skill }
+          </div>
+        </template>
+      </u-table-column>
+    </u-table>
+  </div>
+</div>
+<!-- <script src="../js/lodash.js"></script>
     <script src="../js/vue.min.js"></script>
     <script src="../js/element.js"></script>
 
     <script src="../js/table.js"></script>
     <script src="../js/test.js" type="module"></script>
   </body>
-</html>
+</html> -->
